@@ -1,5 +1,5 @@
 //
-//  ProgramTask.cs
+//  ZincTypeInstExpressionArray.cs
 //
 //  Author:
 //       Willem Van Onsem <vanonsem.willem@gmail.com>
@@ -20,18 +20,10 @@
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System;
 
-namespace ZincOxide {
-
-    public enum ProgramTask : byte {
-        VerifyModel        = 0x00,
-        VerifyData         = 0x01,
-        Match              = 0x10,
-        GenerateHeuristics = 0x20,
-        GenerateBasics     = 0x21,
-        GenerateData       = 0x22,
-        Assume             = 0x30,
-        Transform          = 0x40
+namespace ZincOxide.MiniZinc {
+    public class ZincTypeInstExpressionArray {
+        public ZincTypeInstExpressionArray () {
+        }
     }
-
 }
 
