@@ -1,5 +1,9 @@
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincTypeInstExpressionArray.cs: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* ZincData.cs:
 	* ZincIdent.cs:
 	* ZincModel.cs:
