@@ -1,3 +1,7 @@
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
+	* MiniZinc.cs: 
+
 2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
 	* MiniZinc.cs:
