@@ -1,5 +1,16 @@
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* Program.cs:
+	* ProgramTask.cs:
+	* Interaction.cs:
+	* ProgramUtils.cs:
+	* ZincOxide.csproj:
+	* programVerbosity.cs:
+	* GeneratorVerbosity.cs:
+	* ProgramEnvironment.cs: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* ZincOxide.csproj: 
 
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
